FwGuardian 5.0
--------------

The Web GUI for Firewall Configuration was introduced only in 4.2 series.
The main bugfix was made in this series.

26 Fev 2016
	Apply alias interface bugfix
	Update ndpi-netfilter code
	Fix rrd_collect.pl

13 Jul 2015
	clusterctl.pl fix	

09 Jun 2015
	Fix SYNPROXY with IPS (suricata) inline mode
	Add WPScan user-agent simple-ips blacklist

06 Apr 2015
	Include lock control (fwlock.sh) for exclusive script call

10 Mar 2015
	Fix CONNMARK strategy for load balance without routing cache

05 Mar 2015
	Include a "servername" option in webauth config

04 Mar 2015
	Fix "protocol" type in SQF flow filter
	Fix display network interfaces
	Apply connmark check with iproute2 load balance

05 Feb 2015
	Fix failback rtdgd.mod for lb2tb
	Fix tfshow.cgi refresh web interface

25 Jan 2015
	Fix simpleips greylist update

18 Jan 2015
	Include "clients-per-query 0" in DNS options

17 Jan 2015
	Webauth fwinput, fwroute, profiles bugfix
	- Fix the array elements in selectbox when remove a firewall policy in web interface

14 June 2014
	Starting the new firewall serie.

10 Aug 2014
	New version 5.0.1
	- GUI condition policy bugfix with search calls
	- Add authlog into "Captive portal" menu

19 Aug 2014
	New version 5.0.2 and bugfix and start FwGuardian TurnKey Linux Appliance project
	- Move TRUST list, bannedaccess and routes to directory accesslist (for TKL Appliance project)
	- Fix script paths with accesslist change
	- start.sh pptp bugfix

24 Aug 2014
	New features
	- Include a global IPS and P2P security detection into interfaces file control

26 Aug 2014
	New features
	- Include interfaces.pl for network interface configuration
	- Now, you can enable or disable interface IPS or DropP2P using "network interfaces"
	- webauth.mod improvements
	- Make *firstboot* script when starting by Turnkey Linux Appliance
	- turnkey-dev.tar.gz package: steps to build Turnkey Appliance (Debian like)

27 Aug 2014
	Web interface changes