@@ -47,15 +47,15 @@ sub CreateCpuGraph {
 	"DEF:cuser=$dbrrd/cpu.rrd:cuser:$RRD",
 	"DEF:cnice=$dbrrd/cpu.rrd:cnice:$RRD",
 	"DEF:csystem=$dbrrd/cpu.rrd:csystem:$RRD",
-	"AREA:cuser#a0df05:User   :",
+	"AREA:cuser#a0df05:User   \\:",
 	"GPRINT:cuser:MAX:  Max\\: %6.1lf %%",
 	"GPRINT:cuser:AVERAGE:\t Avg\\: %6.1lf %%",
 	"GPRINT:cuser:LAST:\t Current\\: %6.1lf %%\\n",
-	"STACK:csystem#ffe100:System :",
+	"STACK:csystem#ffe100:System \\:",
 	"GPRINT:csystem:MAX:  Max\\: %6.1lf %%",
 	"GPRINT:csystem:AVERAGE:\t Avg\\: %6.1lf %%",
 	"GPRINT:csystem:LAST:\t Current\\: %6.1lf %%\\n",
-	"STACK:cnice#dc3c14:Nice   :",
+	"STACK:cnice#dc3c14:Nice   \\:",
 	"GPRINT:cnice:MAX:  Max\\: %6.1lf %%",
 	"GPRINT:cnice:AVERAGE:\t Avg\\: %6.1lf %%",
 	"GPRINT:cnice:LAST:\t Current\\: %6.1lf %%\\n";
@@ -96,20 +96,20 @@ sub CreateMemGraph {
         "CDEF:mbuffer_mb=mbuffer,1024,1024,*,/",
         "CDEF:mcache_mb=mcache,1024,1024,*,/",
         "CDEF:mswap_mb=mswap,1024,1024,*,/",
-	"AREA:mused#a0df05:Memory  :",
+	"AREA:mused#a0df05:Memory  \\:",
 	"GPRINT:mused_mb:MAX:  Max\\: %6.0lf MB",
 	"GPRINT:mused_mb:AVERAGE:\t Avg\\: %6.0lf MB",
 	"GPRINT:mused_mb:LAST:\t Current\\: %6.0lf MB\\n",
-	"STACK:mcache#ffe100:Cached  :",
+	"STACK:mcache#ffe100:Cached  \\:",
 	"GPRINT:mcache_mb:MAX:  Max\\: %6.0lf MB",
 	"GPRINT:mcache_mb:AVERAGE:\t Avg\\: %6.0lf MB",
 	"GPRINT:mcache_mb:LAST:\t Current\\: %6.0lf MB\\n",
-	"STACK:mbuffer#dc3c14:Buffers :",
+	"STACK:mbuffer#dc3c14:Buffers \\:",
 	"GPRINT:mbuffer_mb:MAX:  Max\\: %6.0lf MB",
 	"GPRINT:mbuffer_mb:AVERAGE:\t Avg\\: %6.0lf MB",
 	"GPRINT:mbuffer_mb:LAST:\t Current\\: %6.0lf MB",
         "COMMENT:      Memory  =  $_[1] MB  \\n",
-        "LINE1:mswap#808080:Swap    :",
+        "LINE1:mswap#808080:Swap    \\:",
         "GPRINT:mswap_mb:MAX:  Max\\: %6.0lf MB",
         "GPRINT:mswap_mb:AVERAGE:\t Avg\\: %6.0lf MB",
         "GPRINT:mswap_mb:LAST:\t Current\\: %6.0lf MB",
@@ -146,15 +146,15 @@ sub CreateConnGraph {
 	"DEF:ttrack=$dbrrd/conntrack.rrd:ttrack:$RRD",
 	"DEF:utrack=$dbrrd/conntrack.rrd:utrack:$RRD",
 	"DEF:otrack=$dbrrd/conntrack.rrd:otrack:$RRD",
-	"AREA:ttrack#a0df05:TCP     :",
+	"AREA:ttrack#a0df05:TCP     \\:",
 	"GPRINT:ttrack:MAX:  Max\\: %6.0lf",
 	"GPRINT:ttrack:AVERAGE:\t Avg\\: %6.0lf",
 	"GPRINT:ttrack:LAST:\t Current\\: %6.0lf   Connections\\n",
-	"STACK:utrack#ffe100:UDP     :",
+	"STACK:utrack#ffe100:UDP     \\:",
 	"GPRINT:utrack:MAX:  Max\\: %6.0lf",
 	"GPRINT:utrack:AVERAGE:\t Avg\\: %6.0lf",
 	"GPRINT:utrack:LAST:\t Current\\: %6.0lf   Connections\\n",
-	"STACK:otrack#dc3c14:Other   :",
+	"STACK:otrack#dc3c14:Other   \\:",
 	"GPRINT:otrack:MAX:  Max\\: %6.0lf",
 	"GPRINT:otrack:AVERAGE:\t Avg\\: %6.0lf",
 	"GPRINT:otrack:LAST:\t Current\\: %6.0lf   Connections\\n";
@@ -250,7 +250,7 @@ sub ProcessCpu {
    if (not -e "$dbrrd/cpu.rrd") {
       print "creating rrd database for cpu stats...\n";
       RRDs::create "$dbrrd/cpu.rrd",
-              "-s 300",
+              "--step", 300,
               "DS:cuser:DERIVE:600:0:U",
               "DS:cnice:DERIVE:600:0:U",
               "DS:csystem:DERIVE:600:0:U",
@@ -296,7 +296,7 @@ sub ProcessMem {
    if (not -e "$dbrrd/mem.rrd") {
       print "creating rrd database for mem stats...\n";
       RRDs::create "$dbrrd/mem.rrd",
-              "-s 300",
+              "--step", 300,
               "DS:mused:GAUGE:600:0:U",
               "DS:mbuffer:GAUGE:600:0:U",
               "DS:mcache:GAUGE:600:0:U",
@@ -354,7 +354,7 @@ sub ProcessConntrack {
    if (not -e "$dbrrd/conntrack.rrd") {
       print "creating rrd database for conntrack table...\n";
       RRDs::create "$dbrrd/conntrack.rrd",
-              "-s 300",
+              "--step", 300,
               "DS:ttrack:GAUGE:600:0:U",
               "DS:utrack:GAUGE:600:0:U",
               "DS:otrack:GAUGE:600:0:U",
@@ -410,7 +410,7 @@ sub ProcessInterface {
    if (not -e "$dbrrd/$_[0].rrd") {
    	print "creating rrd database for $_[0] interface...\n";
    	RRDs::create "$dbrrd/$_[0].rrd",
-   		"-s 180",
+   		"--step", 180,
    		"DS:in:DERIVE:360:0:U",
    		"DS:out:DERIVE:360:0:U",
    		"DS:inpkt:DERIVE:360:0:U",
